# Todo

./: .cursorignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
android-app/: .gitignore  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/debug/res/xml/: network_security_config.xml
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/todolist/app/: ConnectionViewModel.kt  MainActivity.kt  TodoListApplication.kt
android-app/app/src/main/java/com/todolist/app/di/: AppContainer.kt
android-app/app/src/main/java/com/todolist/app/i18n/: AppLocale.kt
android-app/app/src/main/java/com/todolist/app/navigation/: MainTab.kt  NavGraph.kt  Screen.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/values-zh-rCN/: strings.xml
android-app/gradle/: gradle-daemon-jvm.properties
db/init/: 001_schema.sql
docs/: INDEX.md  README.md
docs/architecture/: repository-structure.md  server.md
docs/deepagents/: acp.md  backends.md  comparison.md  customization.md  data-analysis.md  harness.md  human-in-the-loop.md  long-term-memory.md  models.md  overview.md  quickstart.md  sandboxes.md  skills.md  subagents.md
docs/deepagents/cli/: configuration.md  mcp-tools.md  overview.md  providers.md
docs/deepagents/streaming/: frontend.md  overview.md
docs/development/: checklist.md  commands.md  conventions.md  environment.md  tech-stack.md
docs/domain/: database-schema.md  multi-tenancy.md
docs/platform/: android.md
docs/project/: goals.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
server/alembic/: README  env.py  script.py.mako
server/alembic/versions/: 001_initial.py  002_add_tenants_and_tenant_id_on_todos.py  003_add_users_and_refresh_tokens.py  004_add_media_uploads.py  005_add_conversations.py  006_add_scheduled_at_on_todos.py  007_add_bills.py  008_add_estimated_minutes_on_todos.py  009_bills_type_check.py
server/app/: __init__.py  config.py  db.py  main.py
server/app/api/: deps.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: agent.py  auth.py  bills.py  health.py  media.py  speech.py  tenants.py  todos.py
server/app/core/: __init__.py  config.py  database.py  exceptions.py  limiter.py  logging.py  media_path.py  middleware.py  security.py
server/app/models/: __init__.py  bill.py  conversation.py  media_upload.py  metadata.py  refresh_token.py  tenant.py  todo.py  user.py
server/app/repositories/: __init__.py  base.py  bill_repository.py  conversation_repository.py  health_repository.py  media_repository.py  refresh_token_repository.py  tenant_repository.py  todo_repository.py  user_repository.py
server/app/schemas/: __init__.py  agent.py  auth.py  bill.py  health.py  media.py  speech.py  tenant.py  todo.py
server/app/services/: __init__.py  auth_service.py  bill_service.py  conversation_service.py  health_service.py  media_service.py  speech_service.py  tenant_service.py  todo_service.py
server/app/services/agent/: agent_factory.py  bill_parsing.py  memory_backend.py  memory_infra.py  memory_provider.py  prompts.py  resolve_media.py
server/app/services/agent/tools/: bill_tools.py  clarification_tools.py  db_tools.py  search_tools.py
server/app/services/transcription/: __init__.py  audio_utils.py  base.py  faster_whisper_engine.py  fun_asr_engine.py
server/scripts/: init_local_db.py
server/tests/: __init__.py  conftest.py  test_agent_bill_display.py  test_agent_scheduled_display.py  test_auth.py  test_health.py  test_media.py  test_media_service.py  test_tenants.py  test_todo_service.py  test_todos.py
(+57 files in other folders)
